--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "phi-z-space-website",
   "version": "1.0.0",
-  "description": "The Dynamic Fractal Cosmological Model (DFCM) website, hosted on GitHub Pages with Netlify Functions.",
+  "description": "The Dynamic Fractal Cosmological Model (DFCM) website",
   "main": "index.html",
+  "engines": {
+    "node": ">=18.0.0"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,12 +13,8 @@
     "cosmology",
     "fractal",
     "DFCM",
-    "science",
     "physics"
   ],
   "author": "Sylvain Herbin",
-  "license": "ISC",
-  "dependencies": {
-    "node-fetch": "^2.6.1"
-  }
+  "license": "ISC"
 }
