--- a/package.json
+++ b/package.json
@@ -1,20 +1,32 @@
 {
-  "name": "phi-z-space-website",
+  "name": "phi-z-space",
   "version": "1.0.0",
-  "description": "The Dynamic Fractal Cosmological Model (DFCM) website",
-  "main": "index.html",
+  "description": "The Dynamic Fractal Cosmological Model (DFCM) website with Netlify Functions",
+  "type": "module",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.17.1",
+    "npm": ">=10.9.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "echo 'Build script executed'"
   },
   "keywords": [
     "cosmology",
     "fractal",
     "DFCM",
-    "physics"
+    "physics",
+    "Netlify"
   ],
-  "author": "Sylvain Herbin",
-  "license": "ISC"
+  "author": "Sylvain Herbin <herbinsylvain@protonmail.com>",
+  "license": "ISC",
+  "dependencies": {},
+  "devDependencies": {},
+  "browserslist": [
+    "defaults"
+  ],
+  "volta": {
+    "node": "22.17.1",
+    "npm": "10.9.2"
+  }
 }
