--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,6 @@
-[build]
-  command = "mkdir -p netlify/functions && echo 'Build preparation'"
-  publish = "."
+[build.environment]
+  NODE_VERSION = "22"  # Version majeure seulement
 
 [functions]
   directory = "netlify/functions"
   node_bundler = "esbuild"
-  included_files = ["netlify/functions/**"]
