--- a/vercel.json
+++ b/vercel.json
@@ -20,6 +20,11 @@
     {
       "src": "/api/(.*)",
       "dest": "/api/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/$1"
     }
-  ]
+  ],
+  "outputDirectory": "public"
 }
